Increase the Groovy compile heap size for all sub-projects