@@ -177,6 +177,13 @@ subprojects {
         testRuntime "org.slf4j:slf4j-log4j12:${versions.slf4j}"
     }
 
+    compileTestGroovy {
+        configure(groovyOptions.forkOptions) {
+            memoryMaximumSize = '1g'
+            jvmArgs = ['-XX:MaxPermSize=512m', '-Xms512m', '-Xmx1g']
+        }
+    }
+
     test {
         useTestNG()
 
